# treeedit

./: .gitattributes  .gitconfig  .gitignore  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.md  build.sh  demo.db  demo.sqlite
.github/workflows/: app.yml  docs.yml  pages.yml
docs/: mkdocs.yml
docs/docs/: conventions.md  features.md
pages/: mkdocs.yml
pages/docs/: conventions.md  features.md  git.md  index.md  shortcuts.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  schema.puml  treedelegate.cpp  treedelegate.h  treeedit.icns  treefile.cpp  treefile.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
test/: CMakeLists.txt  tst_treefile.cpp
